--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   audioplayers: ^0.13.5
   flip_card: ^0.4.4
+  shared_preferences: ^0.5.6
+
 
 dev_dependencies:
   flutter_test:
