--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  assets_audio_player: ^1.0.1
   flip_card: ^0.4.4
   shared_preferences: ^0.5.6
+  audioplayers: ^0.14.0
 
 
 dev_dependencies:
